--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,7 +10,25 @@
 
     <h1>tudo meu nada seu</h1>
 
+    <p>não esqueça que nada aqui é seu >:C</p>
+
+    <button onclick="mostrar_informação()">Clique aqui (menos você >:C)</button>
+
     <script src="../js/script.js"></script>
+
+    <script>
+
+        function mostrar_informação(){
+            console.log("matheus henrique")
+            console.log("18 anos")
+            console.log("Assai da meu salário..")
+        }
+
+        console.log("Ola mundo!");
+        var nome = 'matheus henrique'
+
+        console.log(nome);
+    </script>
 
     <img src="download.jpg" alt="">
 </body>
